--- a/myStyle.css
+++ b/myStyle.css
@@ -5,6 +5,8 @@ h1{
 }
 body{
     background-color: darkslategrey;
+    width: 100%;
+    height: 100%;
 }
 #d1
 {
@@ -14,6 +16,8 @@ body{
     left: 250px;
     color: aquamarine;
     font-size: 30px;
+    /* width: 100%;
+    height: 100%; */
 }
 #d2
 {
@@ -29,12 +33,15 @@ body{
     position: relative;
     top: 40px;
     left: 290px;
-    width: 240px;
+    /* width: 240px; */
+    width: 100%;
+
 }
 #img2
 {
     position: relative;
     top: 40px;
     left: 420px;
-    width: 240px;
+    /* width: 240px; */
+    width: 100%;
 }
