--- a/myStyle.css
+++ b/myStyle.css
@@ -16,8 +16,6 @@ body{
     left: 250px;
     color: aquamarine;
     font-size: 30px;
-    /* width: 100%;
-    height: 100%; */
 }
 #d2
 {
@@ -33,15 +31,12 @@ body{
     position: relative;
     top: 40px;
     left: 290px;
-    /* width: 240px; */
-    width: 100%;
-
+    width: 240px;
 }
 #img2
 {
     position: relative;
     top: 40px;
     left: 420px;
-    /* width: 240px; */
-    width: 100%;
+    width: 240px;
 }
