--- a/myStyle.css
+++ b/myStyle.css
@@ -1,42 +1,42 @@
-h1{
-    font-size: 50px;
-    color: aquamarine;
-    font-family: Arial, Helvetica, sans-serif;
-}
-body{
-    background-color: darkslategrey;
-    width: 100%;
-    height: 100%;
-}
-#d1
-{
+.container {
+    width: 70%;
+    margin: auto;
     text-align: center;
-    position: absolute;
-    top: 100px;
-    left: 250px;
-    color: aquamarine;
-    font-size: 30px;
-}
-#d2
-{
+  }
+  
+  .dice {
     text-align: center;
-    color: aquamarine;
-    position: absolute;
-    top: 100px;
-    left: 650px;
-    font-size: 30px;
-}
-#img1
-{
-    position: relative;
-    top: 40px;
-    left: 290px;
-    width: 240px;
-}
-#img2
-{
-    position: relative;
-    top: 40px;
-    left: 420px;
-    width: 240px;
-}
+    display: inline-block;
+  
+  }
+  
+  body {
+    background-color: #393E46;
+  }
+  
+  h1 {
+    margin: 30px;
+    font-family: 'Lobster', cursive;
+    text-shadow: 5px 0 #232931;
+    font-size: 8rem;
+    color: #4ECCA3;
+  }
+  
+  p {
+    font-size: 2rem;
+    color: #4ECCA3;
+    font-family: 'Indie Flower', cursive;
+  }
+  
+  img {
+    width: 80%;
+  }
+  
+  footer {
+    margin-top: 5%;
+    color: #EEEEEE;
+    text-align: center;
+    font-family: 'Indie Flower', cursive;
+  
+  }
+  
