--- a/myStyle.css
+++ b/myStyle.css
@@ -7,18 +7,20 @@
   .dice {
     text-align: center;
     display: inline-block;
-  
+    width: 150px;
+    height: 150px;
   }
   
   body {
     background-color: #393E46;
+    width: 100%;
   }
   
   h1 {
     margin: 30px;
     font-family: 'Lobster', cursive;
     text-shadow: 5px 0 #232931;
-    font-size: 8rem;
+    font-size: 80px;
     color: #4ECCA3;
   }
   
